# pmpp

./: README.md  main.py  matmul.cpp  matmul.cu  matmul.h  pyproject.toml
06-matmul/: README.md  matmul.cpp  matmul.h  matmul_main.py  pyproject.toml
07-convolution/: convolution.cpp  convolution.cu  convolution.h  convolution_main.py  pyproject.toml
convolution/: README.md  convolution.cpp  convolution.cu  convolution.h  main.py  pyproject.toml
matmul/: README.md  main.py  matmul.cu  pyproject.toml
timing/: main.py  pyproject.toml
timing/src/timing/: __init__.py
