[project]
name = "matmul"
version = "0.1.0"
description = "Matrix multiplication CUDA kernels"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pmpp",
    "timing",
]

[project.scripts]
matmul = "matmul_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
pmpp = { workspace = true }
timing = { workspace = true }
